bad/assign_arr_elem_int_bool.example_compiler_output
ERROR
[1mbad/assign_arr_elem_int_bool.lat:4:18: [1;31merror: [0;1massigning to `int` from incompatible type `boolean`[m
	(new int[3])[1] = true;
	                [1;32m^[m
